# Khafre

./: .gitignore  .orthrus.dev.json.example  .oxlintrc.json  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  MIGRATION_PLAN.md  README.md  config.toml.example  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci-app.yml  ci-back.yml  ci.yml  dependabot.yml
app/: App.tsx
app/components/: Preview.tsx  Terminal.tsx
app/hooks/: useConfig.ts  useDevConfig.test.ts  useDevConfig.ts  useProjectConfig.test.ts  useProjectConfig.ts  useProjectDialog.ts  useSphinx.ts  useSystemTheme.ts
app/types/: config.ts  devConfig.ts
app/utils/: logger.test.ts
back/: Cargo.toml  tauri.build.json  tauri.conf.json
back/src/: color_scheme.rs  config.rs  lib.rs  main.rs  sphinx.rs
src/: app.rs  main.rs
src/components/: mod.rs  preview.rs
src/components/layout/: mod.rs  pane.rs  split_view.rs
src/components/terminal/: mod.rs  selection.rs  view.rs
src/services/: config.rs  mod.rs  sphinx.rs  theme.rs
src/services/terminal/: manager.rs  mod.rs  pty.rs
src/state/: hooks.rs  mod.rs
src/types/: color_scheme.rs  config.rs  mod.rs  terminal.rs
